---------------------------------------------------------------------------------------------------
Version: 1.3.2
Date: 2023-03-17
  Fixes:
    - Fixed total game freeze, adding a limit to how far the search area for the next power-pole can grow and aborts when it exceeds the limit.
    - Fixed being unable to place a 2x2 power-pole (substation) in a very small selection by extending the outer-trim of the selection by 1 additional cell.
    - Fixed a nil-error when attempting to call the function 'find_oilwells'
---------------------------------------------------------------------------------------------------
Version: 1.3.1
Date: 2023-03-05  
  Features:
    - Russian localisation file updated; kindly provided by https://github.com/Astorin 
---------------------------------------------------------------------------------------------------
Version: 1.3.0
Date: 2023-03-05
  Features:
    - Added cancel button to close the menu without building anything.
    - Added capturing on_gui_closed (ESC) to cancel the menu.
    - Added mod-setting to always show the menu each time P.U.M.P. is used. When disabled, it'll only show on request (holding shift) or when new options are available. It's enabled by default.
    - Added checkbox for the mod-setting on the menu as well.
  Fixes:
    - The date in the changelog for the 1.2.1 release had a wrong value, which is now corrected.
---------------------------------------------------------------------------------------------------
Version: 1.2.1
Date: 2023-03-03
  Fixes:
    - Remove debug output
---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: 2023-03-03
  Features:
    - Added placing ghosts for electric poles.
    - Added extra option to skip placing ghosts electric poles, in case manual placement is preferred.
  Changes:
    - Swapped order of change-log (newest on top, consistent with most other mods)