@@ -39,3 +39,6 @@ exclude-option-tooltip=Manual placement
 choose-extractor-generic=Select which buildings should be placed.
 choose-extractor-unknown-selection=Select which buildings should be placed.
 choose-extractor-changed-options=The building options available to you have changed since last you used P.U.M.P.. You may want to adjust your pick? 
+
+[controls]
+pump-selection-tool-keybind=Toggle Pump Selection Tool
