@@ -22,5 +22,11 @@ data:extend({
         name = "pump-always-show",
         setting_type = "runtime-per-user",
         default_value = true
-    }
+    },
+    {
+        type = "string-setting",
+        name = "pump-selection-tool-keybind",
+        setting_type = "runtime-per-user",
+        default_value = "CONTROL + SHIFT+ P"
+    },
 })
