@@ -1,3 +1,14 @@
+Version: 		1.3.3
+Date: 			2023-08-07
+Contributor:	sicksicksix
+  Feautures:
+    - Added hotkey support.
+    - Item prototype flag "only-in-cursor"
+		Credits: 	_codegreen
+		Source: https://discord.com/channels/139677590393716737/306402592265732098/1138225784092381284
+	- Localization heading [x] for unknownkey=x.y
+		Credits: 	sharparam
+		Source: https://discord.com/channels/139677590393716737/306402592265732098/1138278375396474890
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.2
 Date: 2023-03-17
